onkelskrue/ole/ole-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ole-rc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ole
    spec:
      containers:
      - name: ole
        image: onkelskrue/ole:v5
        ports:
        - containerPort: 5001
        imagePullPolicy: Always
