onkelskrue/ole/ole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ole-svc
  labels:
    app: ole
spec:
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: ole
